--- a/notebooks/attention.ipynb
+++ b/notebooks/attention.ipynb
@@ -16,7 +16,7 @@
     "# Keras imports\n",
     "from keras import layers\n",
     "from keras import backend as K\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras.layers import Input, LSTM, Dense, Permute, Reshape, multiply, concatenate, RepeatVector\n",
     "\n",
     "# ML4CVD Imports\n",
