--- a/notebooks/ecg/ecg_scan.ipynb
+++ b/notebooks/ecg/ecg_scan.ipynb
@@ -17,10 +17,10 @@
     "from collections import Counter, defaultdict\n",
     "\n",
     "# Keras imports\n",
-    "from keras.models import Model\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.utils.vis_utils import model_to_dot\n",
-    "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.utils.vis_utils import model_to_dot\n",
+    "from tensorflow.keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
     "\n",
     "# ML4CVD Imports\n",
     "from ml4cvd.plots import plot_ecg\n",
