--- a/notebooks/ecg/ecg_wave_model.ipynb
+++ b/notebooks/ecg/ecg_wave_model.ipynb
@@ -10,18 +10,18 @@
     "import os\n",
     "import sys\n",
     "\n",
-    "from keras.layers import Lambda, Input, Dense, LSTM, RepeatVector, concatenate\n",
-    "from keras.models import Model\n",
-    "from keras.optimizers import Adam, RMSprop\n",
-    "from keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
-    "from keras.utils import plot_model\n",
+    "from tensorflow.keras.layers import Lambda, Input, Dense, LSTM, RepeatVector, concatenate\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
+    "from tensorflow.keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
+    "from tensorflow.keras.utils import plot_model\n",
     "from keras import backend as K\n",
-    "from keras.regularizers import l1\n",
+    "from tensorflow.keras.regularizers import l1\n",
     "import numpy as np\n",
-    "from keras.layers import SpatialDropout1D, SpatialDropout2D, SpatialDropout3D, Lambda\n",
-    "from keras.layers import Input, Dense, Dropout, BatchNormalization, Activation, Flatten\n",
-    "from keras.layers.convolutional import Conv1D, Conv2D, Conv3D, UpSampling2D, UpSampling3D, MaxPooling1D\n",
-    "from keras.layers.convolutional import MaxPooling2D, MaxPooling3D, AveragePooling1D, AveragePooling2D, AveragePooling3D\n",
+    "from tensorflow.keras.layers import SpatialDropout1D, SpatialDropout2D, SpatialDropout3D, Lambda\n",
+    "from tensorflow.keras.layers import Input, Dense, Dropout, BatchNormalization, Activation, Flatten\n",
+    "from tensorflow.keras.layers.convolutional import Conv1D, Conv2D, Conv3D, UpSampling2D, UpSampling3D, MaxPooling1D\n",
+    "from tensorflow.keras.layers.convolutional import MaxPooling2D, MaxPooling3D, AveragePooling1D, AveragePooling2D, AveragePooling3D\n",
     "\n",
     "# IPython imports\n",
     "from IPython.display import Image\n",
