--- a/notebooks/gan_mnist.ipynb
+++ b/notebooks/gan_mnist.ipynb
@@ -11,15 +11,15 @@
     "import random\n",
     "import numpy as np\n",
     "\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
-    "from keras.datasets import mnist, cifar10\n",
-    "from keras.regularizers import l1, l2\n",
-    "from keras.utils import plot_model\n",
-    "from keras.layers import Input, Dense, Dropout, BatchNormalization, Activation, Flatten, Reshape, SpatialDropout2D\n",
-    "from keras.layers import Activation, Input, Dense, Conv2D, Conv2DTranspose, BatchNormalization, LeakyReLU, GaussianNoise\n",
-    "from keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
-    "from keras.optimizers import Adam, RMSprop\n",
+    "from tensorflow.keras.datasets import mnist, cifar10\n",
+    "from tensorflow.keras.regularizers import l1, l2\n",
+    "from tensorflow.keras.utils import plot_model\n",
+    "from tensorflow.keras.layers import Input, Dense, Dropout, BatchNormalization, Activation, Flatten, Reshape, SpatialDropout2D\n",
+    "from tensorflow.keras.layers import Activation, Input, Dense, Conv2D, Conv2DTranspose, BatchNormalization, LeakyReLU, GaussianNoise\n",
+    "from tensorflow.keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
+    "from tensorflow.keras.optimizers import Adam, RMSprop\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
