--- a/notebooks/hidden_inference.ipynb
+++ b/notebooks/hidden_inference.ipynb
@@ -16,7 +16,7 @@
     "\n",
     "# 3rd party imports\n",
     "from sklearn import manifold\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
     "from IPython.display import Image\n",
     "\n",
@@ -245,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
