--- a/notebooks/mixup_mnist_cifar.ipynb
+++ b/notebooks/mixup_mnist_cifar.ipynb
@@ -16,13 +16,13 @@
     "\n",
     "import keras\n",
     "from keras import backend as K\n",
-    "from keras.models import Model\n",
-    "from keras.regularizers import l2\n",
-    "from keras.optimizers import Adam\n",
-    "from keras.utils import to_categorical\n",
-    "from keras.datasets import mnist, cifar10\n",
-    "from keras.layers import Activation, Input, Dense, Conv2D, LeakyReLU, AveragePooling2D\n",
-    "from keras.layers import Dropout, BatchNormalization, Flatten, Reshape, SpatialDropout2D"
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.regularizers import l2\n",
+    "from tensorflow.keras.optimizers import Adam\n",
+    "from tensorflow.keras.utils import to_categorical\n",
+    "from tensorflow.keras.datasets import mnist, cifar10\n",
+    "from tensorflow.keras.layers import Activation, Input, Dense, Conv2D, LeakyReLU, AveragePooling2D\n",
+    "from tensorflow.keras.layers import Dropout, BatchNormalization, Flatten, Reshape, SpatialDropout2D"
    ]
   },
   {
@@ -248,7 +248,7 @@
     "                                 strides=strides,\n",
     "                                 activation=None,\n",
     "                                 batch_normalization=False)\n",
-    "            x = keras.layers.add([x, y])\n",
+    "            x = tensorflow.keras.layers.add([x, y])\n",
     "            x = Activation('relu')(x)\n",
     "        num_filters *= 2\n",
     "\n",
@@ -342,7 +342,7 @@
     "                                 strides=strides,\n",
     "                                 activation=None,\n",
     "                                 batch_normalization=False)\n",
-    "            x = keras.layers.add([x, y])\n",
+    "            x = tensorflow.keras.layers.add([x, y])\n",
     "\n",
     "        num_filters_in = num_filters_out\n",
     "\n",
