--- a/notebooks/variational_autoencoders/vae_cifar.ipynb
+++ b/notebooks/variational_autoencoders/vae_cifar.ipynb
@@ -9,14 +9,14 @@
     "#vae.py\n",
     "import numpy as np\n",
     "\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
-    "from keras.regularizers import l1\n",
-    "from keras.utils import plot_model\n",
-    "from keras.datasets import mnist, cifar10\n",
-    "from keras.layers import Lambda, Input, Dense, Flatten, Reshape, Dropout\n",
-    "from keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
-    "from keras.layers.convolutional import Conv2D, Conv2DTranspose, UpSampling2D, MaxPooling2D\n",
+    "from tensorflow.keras.regularizers import l1\n",
+    "from tensorflow.keras.utils import plot_model\n",
+    "from tensorflow.keras.datasets import mnist, cifar10\n",
+    "from tensorflow.keras.layers import Lambda, Input, Dense, Flatten, Reshape, Dropout\n",
+    "from tensorflow.keras.losses import mse, binary_crossentropy, kullback_leibler_divergence\n",
+    "from tensorflow.keras.layers.convolutional import Conv2D, Conv2DTranspose, UpSampling2D, MaxPooling2D\n",
     "\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt"
