--- a/notebooks/inspector.ipynb
+++ b/notebooks/inspector.ipynb
@@ -13,7 +13,7 @@
     "from collections import Counter\n",
     "\n",
     "# Keras imports\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras.optimizers import Adam\n",
     "from keras.utils.vis_utils import model_to_dot\n",
     "from keras.layers import Input, Dense, Dropout, AlphaDropout, BatchNormalization, Activation\n",
@@ -136,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
