--- a/notebooks/saliency/saliency_brain_age.ipynb
+++ b/notebooks/saliency/saliency_brain_age.ipynb
@@ -14,7 +14,7 @@
     "from collections import Counter\n",
     "\n",
     "# Keras imports\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
     "\n",
     "# ML4CVD Imports\n",
