--- a/notebooks/shallow_introspection.ipynb
+++ b/notebooks/shallow_introspection.ipynb
@@ -14,7 +14,7 @@
     "from collections import Counter\n",
     "\n",
     "# Keras imports\n",
-    "from keras.models import Model\n",
+    "from tensorflow.keras.models import Model\n",
     "from keras import backend as K\n",
     "from sklearn.manifold import TSNE\n",
     "\n",
