BroadE Notebook for ML Workshop (#133)

--- a/notebooks/variational_autoencoders/vae_mri_slice.ipynb
+++ b/notebooks/variational_autoencoders/vae_mri_slice.ipynb
@@ -25,7 +25,7 @@
     "\n",
     "# ML4CVD Imports\n",
     "from ml4cvd.arguments import parse_args\n",
-    "from ml4cvd.models import make_multimodal_multitask_new, train_model_from_generators\n",
+    "from ml4cvd.models import make_multimodal_multitask_model, train_model_from_generators\n",
     "from ml4cvd.tensor_generators import big_batch_from_minibatch_generator, test_train_valid_tensor_generators\n",
     "\n",
     "MRI_TENSORS = '/mnt/disks/lax-sax-ecg-ttn/2017-07-30/'"
@@ -51,9 +51,8 @@
     "            '--id', 'mri_slice_vae']\n",
     "args = parse_args()\n",
     "generate_train, generate_valid, generate_test = test_train_valid_tensor_generators(args.tensor_maps_in,  args.tensor_maps_out,  args.tensors, args.batch_size,   args.valid_ratio, args.test_ratio, args.test_modulo, args.balance_csvs)\n",
-    "model = make_multimodal_multitask_new(**args.__dict__)\n",
-    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(args.tensor_maps_in, args.tensor_maps_out,\n",
-    "                                                                        generate_test, args.test_steps)"
+    "model = make_multimodal_multitask_model(**args.__dict__)\n",
+    "test_data, test_labels, test_paths = big_batch_from_minibatch_generator(generate_test, args.test_steps)"
    ]
   },
   {
