--- a/notebooks/ecg/ecg_lunch.ipynb
+++ b/notebooks/ecg/ecg_lunch.ipynb
@@ -97,7 +97,7 @@
     "xdir = '/mnt/disks/ecg-text3/2019-04-26/'\n",
     "paths = [xdir+'1238558.hd5', xdir+'1240625.hd5', xdir+'1258475.hd5', xdir+'1286494.hd5', xdir+'1381627.hd5']\n",
     "generator = TensorGenerator(3, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
-    "data, labels, hd5s = next(generator)\n",
+    "data, labels, _, hd5s = next(generator)\n",
     "for i,hd5p in enumerate(hd5s):\n",
     "    with h5py.File(hd5s[i], 'r') as hd5:\n",
     "        print(str(hd5['ecg_rest_text'][0]).strip())\n",
@@ -139,7 +139,7 @@
    "source": [
     "paths = [xdir+'1719189.hd5', xdir+'1723645.hd5', xdir+'1767593.hd5', xdir+'1769144.hd5', xdir+'1770473.hd5']\n",
     "generator = TensorGenerator(3, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
-    "data, labels, hd5s = next(generator)\n",
+    "data, labels, _, hd5s = next(generator)\n",
     "for i,hd5p in enumerate(hd5s):\n",
     "    with h5py.File(hd5s[i], 'r') as hd5:\n",
     "        print(str(hd5['ecg_rest_text'][0]).strip())\n",
