--- a/notebooks/mlp_tsne.ipynb
+++ b/notebooks/mlp_tsne.ipynb
@@ -67,7 +67,7 @@
     "    print(w.shape)\n",
     "embed_model = make_hidden_layer_model(model, args.tensor_maps_in, layer_name)\n",
     "embed_model.summary()\n",
-    "test_data, test_labels, test_paths = next(generate_test)\n",
+    "test_data, test_labels, _, test_paths = next(generate_test)\n",
     "print(list(test_data.keys()))\n",
     "x_embed = embed_model.predict(test_data)\n",
     "y_pred = model.predict(test_data)"
