--- a/notebooks/mri/mri_outliers.ipynb
+++ b/notebooks/mri/mri_outliers.ipynb
@@ -133,7 +133,7 @@
     "paths = [xdir+'5688245.hd5']\n",
     "np.random.seed(1234)\n",
     "generator = TensorGenerator(1, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
-    "data, labels, hd5s = next(generator)\n",
+    "data, labels, _, hd5s = next(generator)\n",
     "predictions = model.predict(data, batch_size=1)\n",
     "y = {tm.output_name():p for p, tm in zip(predictions, args.tensor_maps_out)}\n",
     "print(list(labels.keys()))\n",
