--- a/notebooks/saliency/saliency_maps.ipynb
+++ b/notebooks/saliency/saliency_maps.ipynb
@@ -446,7 +446,7 @@
     "paths = [xdir+'1238558.hd5', xdir+'1258475.hd5', xdir+'1286494.hd5', xdir+'1381627.hd5', \n",
     "         xdir+'1487911.hd5', xdir+'1509361.hd5', xdir+'1578315.hd5', xdir+'1616127.hd5', xdir+'1723645.hd5', ]\n",
     "generator = TensorGenerator(8, args.tensor_maps_in, args.tensor_maps_out, paths, None, True)\n",
-    "data, labels, hd5s = next(generator)\n",
+    "data, labels, _, hd5s = next(generator)\n",
     "print('predicitons are:', model.predict(data))"
    ]
   },
