Use TMAPS for ECG visualization input (#281)
Also
* Remove obsolete instructions now that ml4cvd has the needed packages and permissions.
* Use newer hd5 for ECGs.
* Switch to local paths when on a ML4CVD VM.

--- a/notebooks/review_results/identify_a_sample_to_review.ipynb
+++ b/notebooks/review_results/identify_a_sample_to_review.ipynb
@@ -22,27 +22,8 @@
     "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-danger\">\n",
-    "    Problems:\n",
-    "    <ul>\n",
-    "        <li><b>ml4cvd</b> notebooks do not currently have permission to access data in project <a href='https://console.cloud.google.com/bigquery?project=uk-biobank-sek-data'>uk-biobank-sek-data</a>\n",
-    "</li>\n",
-    "        <li><b>Terra</b> notebooks with Facets for interactive data exploration are broken in the latest version of chrome. The work-around described in <a href=\"https://github.com/PAIR-code/facets/issues/207\">https://github.com/PAIR-code/facets/issues/207</a> is in place but a bit more work is needed per <a href=\"https://broadworkbench.atlassian.net/browse/IA-1684\">https://broadworkbench.atlassian.net/browse/IA-1684</a>.</li>\n",
-    "    </ul>\n",
+    "<b>Terra</b> notebooks with Facets for interactive data exploration are broken in the latest version of chrome. The work-around described in <a href=\"https://github.com/PAIR-code/facets/issues/207\">https://github.com/PAIR-code/facets/issues/207</a> is in place but a bit more work is needed per <a href=\"https://broadworkbench.atlassian.net/browse/IA-1684\">https://broadworkbench.atlassian.net/browse/IA-1684</a>.\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO(deflaux): remove this cell after gcr.io/broad-ml4cvd/deeplearning:tf2-latest-gpu has this preinstalled.\n",
-    "from ml4cvd.runtime_data_defines import determine_runtime\n",
-    "from ml4cvd.runtime_data_defines import Runtime\n",
-    "\n",
-    "if Runtime.ML4CVD_VM == determine_runtime():\n",
-    "    !pip3 install --user facets-overview"
    ]
   },
   {
@@ -80,7 +61,7 @@
     "        <li><a href=\"https://bigquery.cloud.google.com/table/uk-biobank-sek-data:raw_phenotypes.ukb9222_no_empty_strings_20181128\">phenotype values</a>\n",
     "        <li><a href=\"https://bigquery.cloud.google.com/dataset/uk-biobank-sek-data:a_ttl_one_week\">available ML results</a>\n",
     "    </ul>      \n",
-    "<div>\n"
+    "</div>"
    ]
   },
   {
@@ -114,19 +95,6 @@
     "  `uk-biobank-sek-data.ml_results.inference_ecg_rest_age_sex_autoencode_lvmass` AS ecg\n",
     "ON\n",
     "  eid = sample_id"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bigquery sample_info\n",
-    "\n",
-    "---[ Demonstrate that this notebook will work once ml4cvd permissions are sorted out. ]---\n",
-    "\n",
-    "SELECT * FROM `bigquery-public-data.human_genome_variants.1000_genomes_sample_info`"
    ]
   },
   {
@@ -262,7 +230,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
