--- a/notebooks/review_results/review_one_sample.ipynb
+++ b/notebooks/review_results/review_one_sample.ipynb
@@ -19,14 +19,6 @@
     "        <li><b>Terra</b> is running custom Docker image <kbd>gcr.io/uk-biobank-sek-data/ml4cvd_terra:20200226_122553</kbd>.</li>\n",
     "        <li><b>ml4cvd</b> is running custom Docker image <kbd>gcr.io/broad-ml4cvd/deeplearning:tf2-latest-gpu</kbd>.</li>\n",
     "    </ul>\n",
-    "</div>\n",
-    "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "    Problems:\n",
-    "    <ul>\n",
-    "        <li><b>ml4cvd</b> notebooks do not currently have permission to access data in project <a href='https://console.cloud.google.com/bigquery?project=uk-biobank-sek-data'>uk-biobank-sek-data</a> so any cells that make use of tabular data appear broken but they will work fine once the permissions are fixed.\n",
-    "</li>\n",
-    "    </ul>\n",
     "</div>"
    ]
   },
@@ -37,22 +29,6 @@
     "<div class=\"alert alert-block alert-info\">\n",
     "Tip: <b>ml4cvd users</b> all the functions that work with ECG or MRI data have an optional <kbd>folder</kbd> parameter. You can direct those methods to read contents of any mounted persistent disk.\n",
     "</div>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# TODO(deflaux): remove this cell after gcr.io/broad-ml4cvd/deeplearning:tf2-latest-gpu has this preinstalled.\n",
-    "from ml4cvd.runtime_data_defines import determine_runtime\n",
-    "from ml4cvd.runtime_data_defines import Runtime\n",
-    "\n",
-    "if Runtime.ML4CVD_VM == determine_runtime():\n",
-    "    !pip3 install --user altair plotnine vega\n",
-    "    !jupyter nbextension install --user --py vega\n",
-    "    !jupyter nbextension enable vega --user --py"
    ]
   },
   {
@@ -106,7 +82,7 @@
     "        <li><a href=\"https://bigquery.cloud.google.com/table/uk-biobank-sek-data:raw_phenotypes.ukb9222_no_empty_strings_20181128\">phenotype values</a>\n",
     "        <li><a href=\"https://bigquery.cloud.google.com/dataset/uk-biobank-sek-data:a_ttl_one_week\">available ML results</a>\n",
     "    </ul>      \n",
-    "<div>\n"
+    "</div>"
    ]
   },
   {
@@ -200,11 +176,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Review one sample\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "As of 20200319 we have not yet incorporated the fake MRI data. To view real MRI data, you can use sample id 1031385.\n",
-    "</div>"
+    "# Review one sample"
    ]
   },
   {
@@ -214,7 +186,7 @@
    "outputs": [],
    "source": [
     "#---[ EDIT THIS VARIABLE VALUE IF YOU LIKE ]---\n",
-    "SAMPLE_TO_REVIEW = 1031385  # or try 'fake_1'"
+    "SAMPLE_TO_REVIEW = 1655349"
    ]
   },
   {
@@ -224,6 +196,7 @@
    "outputs": [],
    "source": [
     "tidy_resting_ecg_signal = raw_ecg.reshape_resting_ecg_to_tidy(sample_id=SAMPLE_TO_REVIEW)\n",
+    "\n",
     "tidy_resting_ecg_signal.shape"
    ]
   },
@@ -234,6 +207,7 @@
    "outputs": [],
    "source": [
     "(exercise_ecg_trend, exercise_ecg_signal) = raw_ecg.reshape_exercise_ecg_to_tidy(sample_id=SAMPLE_TO_REVIEW)\n",
+    "\n",
     "print(exercise_ecg_trend.shape)\n",
     "print(exercise_ecg_signal.shape)"
    ]
@@ -461,11 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cardiac MRI visualization\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "As of 20200319 we have not yet incorporated the fake cardiac MRI data. To view a real MRI, you can use sample id 1031385.\n",
-    "</div>"
+    "## Cardiac MRI visualization"
    ]
   },
   {
@@ -491,10 +461,6 @@
    "metadata": {},
    "source": [
     "## Brain and other MRIs interactive visualization\n",
-    "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
-    "As of 20200318 we have not yet incorporated the fake brain MRI data. To view a real MRI, you can use sample id 1031385.\n",
-    "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
     "<b>Tip:</b> Click on the image instance slider and then use the left/right arrows to animate the image.\n",
@@ -604,7 +570,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   },
   "toc": {
    "base_numbering": 1,
